# FYP

./: .gitignore  README.md
Papers/压缩/IETC/: eq5.md
初期报告/: 1_Supervisor Guidelines Crafting Task Sheets & Work Plans.docx  3_任务书和计划表下发操作流程.docx  GCU Specification and Preliminary Report Template BEng.doc  LOGBOOK.typ  SPRT.docx  p_report.typ  ref.bib  risk.typ
数据压缩学习/: 入门.typ
数据压缩学习/src/: CMakeLists.txt
数据压缩学习/src/LZW/: LZW.cpp
数据压缩学习/src/entropy/: entropy.cpp
数据压缩学习/src/huffman/: huffman.cpp
